fix: resolve permission issues in devcontainer configuration
- Split system and Python package installations into separate commands
- Move system package installation to updateContentCommand
- Add sudo for system commands
- Keep pip installations in postCreateCommand
- Maintain all required dependencies for Manim and ManimPango

This fixes the permission denied errors when setting up the development container.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,9 @@
     "image": "mcr.microsoft.com/devcontainers/python:3.11",
 
     // Install required system dependencies for Manim and other packages
-    "postCreateCommand": "apt-get update && apt-get install -y pkg-config cmake build-essential libcairo2-dev python3-dev libffi-dev ffmpeg libpango1.0-dev libglib2.0-dev libpangocairo-1.0-0 && pip install --upgrade pip && pip install -r requirements.txt",
+    "updateContentCommand": "sudo apt-get update && sudo apt-get install -y pkg-config cmake build-essential libcairo2-dev python3-dev libffi-dev ffmpeg libpango1.0-dev libglib2.0-dev libpangocairo-1.0-0",
+    
+    "postCreateCommand": "python -m pip install --upgrade pip && python -m pip install -r requirements.txt",
 
     "features": {
         "ghcr.io/devcontainers/features/git:1": {},
